--- a/src/App.css
+++ b/src/App.css
@@ -397,7 +397,7 @@ button.button-green {
   .px-2 {
     padding: 0 1rem;
   }
-  
+
   .px-3 {
     padding: 0 2rem;
   }
@@ -437,6 +437,18 @@ button.button-green {
 
   .modal-main {
     width: 100%;
+  }
+
+  button.button-green {
+    padding: 0.65rem 1rem;
+  }
+
+  .pl-1 {
+    padding-left: 0.5rem;
+  }
+
+  .sidebar-content {
+    padding: 0rem 0.5rem;
   }
 }
 
