add hover fx and cursor pointer for action buttons

--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,12 @@ button {
   }
 }
 
+.menu-hover:hover {
+  background-color: #d1d5db;
+  padding: 0.5rem 1rem;
+  border-radius: 35px;
+}
+
 .d-block {
   display: block;
 }
